--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- This is Squarespace. --><!-- yliu -->
 <base href="">
 <meta charset="utf-8" />
-<title>Yang Liu 劉 洋</title>
+<title>DEZHAO LUO 罗德昭</title>
 <link rel="shortcut icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/59a00f57f9a61e5b1771b6dc/1504206992522-N8FAHB0XTOMUHN7RQRGW/favicon.ico"/>
 <link rel="canonical" href="https://yliu.net"/>
 <meta property="og:site_name" content="Yang Liu 劉 洋"/>
